# g4-sipm

./: CMakeLists.txt  README.md  main.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  Materials.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
macro/: run.mac  vis.mac
src/: ActionInitialization.cxx  DetectorConstruction.cxx  EventAction.cxx  Materials.cxx  PrimaryGeneratorAction.cxx  RunAction.cxx  SensitiveDetector.cxx  SteppingAction.cxx
